--- a/app/html/task2.html
+++ b/app/html/task2.html
@@ -13,11 +13,11 @@
   </div>
   <nav class="scroll-menu">
     <ul>
-      <li class="scroll-link" onclick="goToFirstSection()">First section</li>
-      <li class="scroll-link" onclick="goToSecondSection()">Second section</li>
-      <li class="scroll-link" onclick="goToThirdSection()">Third section</li>
-      <li class="scroll-link" onclick="goToFourthSection()">Fourth section</li>
-      <li class="scroll-link" onclick="goToFifthSection()">Fifth section</li>
+      <li class="scroll-link" onclick="goToFirstSection()"><a href="#first">First section</a></li>
+      <li class="scroll-link" onclick="goToSecondSection()"><a href="#second">Second section</a></li>
+      <li class="scroll-link" onclick="goToThirdSection()"><a href="#third">Third section</a></li>
+      <li class="scroll-link" onclick="goToFourthSection()"><a href="#fourth">Fourth section</a></li>
+      <li class="scroll-link" onclick="goToFifthSection()"><a href="#fifth">Fifth section</a></li>
     </ul>
   </nav>
   <div id="first" class="scroll-section">First section</div>
